<resources>
    <string name="app_name">carbonFootprint</string>
    <string name="ini">An initiative towards a <b><i>better World</i></b></string>
    <string name="reg">Sign in/Sign up</string>
    <string name="name">Enter your name</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="phone_number">Enter your phone number</string>
    <string name="stay">stay logged in</string>
</resources>
